# totp-generator

./: .gitignore  Cargo.toml  README.md  build.rs  build_in_docker.sh
.github/workflows/: release.yml
examples/: config.json
src/: bindings.rs  logging.rs  main.rs  state.rs  topt.rs  totp.rs
src/config/: configuration.rs  mod.rs  secrets.rs
src/output/: mod.rs  onetime.rs
src/output/cui/: app.rs  console.rs  mod.rs
src/output/cui/components/: messages.rs  mod.rs  totp_box.rs
src/output/cui/input/: keyboard.rs
src/output/cui/numbers/: mod.rs  pipe.rs  utf8.rs
src/output/web/: server.rs
src/qr/: migration_payload.rs  mod.rs  prompt.rs  reader.rs  zbar.rs
