[package]
name = "totp-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] } # for command-line parsing
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.8"
hmac = "0.12"
sha1 = "0.10"
base32 = "0.4"
actix-web = "4" # for HTTP server
