[package]
name = "totp-generator"
version = "0.1.0"
edition = "2024"

[features]
default = ["cli", "http"]
cli = []
http = []
onetime = []

[dependencies]
clap = { version = "4", features = ["derive", "env"] } # for command-line parsing
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.8"
hmac = "0.12"
sha1 = "0.10"
base32 = "0.4"
actix-web = "4" # for HTTP server
crossterm = { version = "0.27", features = ["event-stream"] }
ratatui = "0.29"
rand = "0.9.1"
tokio = { version = "1.37", features = ["full"] }
atty = "0.2"
copypasta = "0.10.2"
futures-core = "0.3.31"
tokio-stream = "0.1.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
anyhow = "1.0.98"
time = { version = "0.3.41", features=["local-offset"]}
